--- a/AI_Python/1_Basic_Programs.ipynb
+++ b/AI_Python/1_Basic_Programs.ipynb
@@ -1,11 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "4870ae6c",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#1. Write a Python program to reverse words of sentence in the same orders"
    ]
@@ -59,11 +57,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "id": "67ce0267",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#2 Write a Python program to reverse words of sentence in the same order "
    ]
@@ -107,9 +103,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "052b9565",
+   "metadata": {},
+   "source": [
+    "#3 Write a Python code to to pickup a list from a string dynamically"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "50504309",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import ast\n",
+    "\n",
+    "def extract_list(string):\n",
+    "    try:\n",
+    "        extracted_list = ast.literal_eval(string)\n",
+    "        if isinstance(extracted_list, list):\n",
+    "            return extracted_list\n",
+    "        else:\n",
+    "            return \"No list found in the string.\"\n",
+    "    except:\n",
+    "        return \"Invalid input.\"\n",
+    "\n",
+    "# Example usage\n",
+    "string = \"[1, 2, 3, 4]\"\n",
+    "print(extract_list(string))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f6715de",
+   "metadata": {},
+   "source": [
+    "#4 Write a Python fuction which takes \"Text, chunk size, overlap size\" as argument to divide the given text into chunks of given size with given overlap size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9d564d9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hello, how', 'how are yo', ' you doing', 'ing today?', 'ay?']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def chunk_text(text, chunk_size, overlap_size):\n",
+    "    chunks = []\n",
+    "    start = 0\n",
+    "    length = len(text)\n",
+    "    \n",
+    "    while start < length:\n",
+    "        end = start + chunk_size\n",
+    "        chunk = text[start:end]\n",
+    "        chunks.append(chunk)\n",
+    "        start = start + chunk_size - overlap_size\n",
+    "        \n",
+    "    return chunks\n",
+    "\n",
+    "# Example usage\n",
+    "text = \"Hello, how are you doing today?\"\n",
+    "chunk_size = 10\n",
+    "overlap_size = 3\n",
+    "print(chunk_text(text, chunk_size, overlap_size))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72263082",
+   "metadata": {},
+   "source": [
+    " Write a Python function to accept an input string and perform the following operations on it:\n",
+    "1. Coaunt the total number of words in the sentence\n",
+    "2. Find the longest word in the sentence\n",
+    "3. Return a new sentence in which: \n",
+    "    a. each word starts with an uppercase letter\n",
+    "    b. All extra spaces (leading, trailing, or multiple spaces between words) are removed.\n",
+    "\n",
+    "Final output should be a Tuple with the above three elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "79f225a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 'python', 'Hello World From Python')\n"
+     ]
+    }
+   ],
+   "source": [
+    "def process_sentence(sentence):\n",
+    "    # Remove extra spaces and split into words\n",
+    "    words = sentence.strip().split()\n",
+    "    \n",
+    "    # Count words\n",
+    "    word_count = len(words)\n",
+    "    \n",
+    "    # Find the longest word\n",
+    "    longest_word = \"\"\n",
+    "    for word in words:\n",
+    "        if len(word) > len(longest_word):\n",
+    "            longest_word = word\n",
+    "    \n",
+    "    # Create new sentence with each word capitalized\n",
+    "    capitalized_words = []\n",
+    "    for word in words:\n",
+    "        capitalized_words.append(word.capitalize())\n",
+    "    new_sentence = \" \".join(capitalized_words)\n",
+    "    \n",
+    "    return (word_count, longest_word, new_sentence)\n",
+    "\n",
+    "# Example usage\n",
+    "sentence = \"   hello   world   from    python  \"\n",
+    "print(process_sentence(sentence))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "052b9565",
+   "id": "61a8b3cb",
    "metadata": {},
    "outputs": [],
    "source": []
